[gd_scene load_steps=3 format=3 uid="uid://cn7wb8x04pad5"]

[ext_resource type="Script" uid="uid://dijfxyu7n5hla" path="res://ui/game_over_ui.gd" id="1_xu1am"]
[ext_resource type="FontFile" uid="uid://dmebi7ig6ljst" path="res://poco/Poco.ttf" id="2_nwi6w"]

[node name="GameOverUI" type="CanvasLayer"]
script = ExtResource("1_xu1am")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -99.0
offset_top = -140.5
offset_right = 99.0
offset_bottom = 140.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_nwi6w")
theme_override_font_sizes/font_size = 30
text = "GAME OVER
"

[node name="StatsLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_nwi6w")
theme_override_font_sizes/font_size = 24
text = "asdf"

[node name="RestartButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_nwi6w")
text = "Restart"

[node name="QuitButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_nwi6w")
text = "Quit to Desktop"
